# IVOA

./: .gitignore  README.md  setup.py
data_preprocessing/: CMakeLists.txt  README.md  README_ML_Evaluation.md  install_dependencies.sh  manifest.xml  set_env.bash
data_preprocessing/include/: dataset.h  depth2pointcloud.h  evaluator.h  io_access.h
data_preprocessing/scripts/: run_airsim_data_processing.bash  run_airsim_data_processing_cpip_local.bash  run_ganet_data_processing_local.bash  run_husky_data_processing_cpip_local.bash  run_mltool_evaluation.bash  run_mltool_evaluation_cpip_local.bash  visualize_distance_error_histogram.py  visualize_histograms.py
data_preprocessing/src/: dataset.cpp  depth2pointcloud.cpp  evaluator.cpp  io_access.cpp  main_airsim_processing.cpp  main_mltool_eval.cpp
data_preprocessing/util/: Camera_Extrinsics.yaml  airsim_city_wb_calibration.yaml  airsim_city_wb_calibration_ds.yaml  husky_Jun_6_21_calib_left.yaml  husky_Jun_6_21_calib_left_ds.yaml  ml_tool_depth_calibration.yaml  ml_tool_depth_calibration_ds.yaml  rviz.rviz
failure_detection/data_loader/: load_full_images.py  load_full_images_pp.py  load_patches.py
failure_detection/networks/: failure_detection_multi_class.py
failure_detection/testing/: analyze_results.py  cluster_error_embeddings.py  dimensionality_reduction.py  drawing.py  error_clustering.py  evaluator.py  extract_embedding.py  extract_embedding_r.py  generate_figures.py  run_evaluation.py  run_pp_evaluation.py  test_multi_class_model.py  test_multi_class_per_image.py  visualize_error_clustering.py  visualize_inference_results.py
failure_detection/testing/run_scripts/: exec_embedding_extraction.bash  exec_embedding_extraction_r.bash  exec_run_evaluation.bash  exec_run_pp_evaluation.bash  exec_test_multi_class.bash  exec_visualize_inference_results.bash
failure_detection/training/: export_model.py  train_multi_class_model.py
failure_detection/training/run_scripts/: exec_export_model.bash  exec_export_model_light.bash  exec_train_multi_class.bash
pixel_level_failure_detection/: README.md
pixel_level_failure_detection/config/: defaults.py
pixel_level_failure_detection/config/airsim/: airsimAfrica_mobilenetv2dialated-c1_deepsup_bin.yaml  airsimCity_mobilenetv2dialated-c1_deepsup_bin.yaml  airsimCity_mobilenetv2dialated-stereo-c1_deepsup_bin.yaml  airsimNeighborhood_mobilenetv2dialated-c1_deepsup_bin.yaml
pixel_level_failure_detection/data_loader/: load_images.py
pixel_level_failure_detection/networks/models/: models.py
pixel_level_failure_detection/testing/: analyze_entropy_results.py  test_modular.py
pixel_level_failure_detection/testing/run_scripts/: exec_test_modular_ganet_robodata.bash
pixel_level_failure_detection/training/: train_modular.py
pixel_level_failure_detection/training/run_scripts/: exec_train_modular_ganet_robodata.bash
